// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportList expect to render empty list 1`] = `
<withRouter(ReportsPage)>
  <LoadingState
    loading={false}
    placeholder=""
  >
    <withRouter(Connect(NoReports)) />
  </LoadingState>
</withRouter(ReportsPage)>
`;

exports[`ReportList expect to render list 1`] = `
<withRouter(ReportsPage)>
  <LoadingState
    loading={false}
    placeholder=""
  >
    <TableToolbar
      className="pf-u-justify-content-space-between"
      isFooter={false}
    >
      <ToolbarGroup
        className={null}
      >
        <ToolbarItem
          className="pf-u-mr-md"
        >
          <Button
            aria-label={null}
            className=""
            component={[Function]}
            isActive={false}
            isBlock={false}
            isDisabled={false}
            isFocus={false}
            isHover={false}
            isInline={false}
            to="/reports/upload"
            type="button"
            variant="primary"
          >
            Create
          </Button>
        </ToolbarItem>
      </ToolbarGroup>
    </TableToolbar>
    <Table
      aria-label="Reports list"
      borders={true}
      cells={
        Array [
          Object {
            "props": Object {},
            "title": "Report Id",
          },
          Object {
            "props": Object {},
            "title": "Customer Id",
          },
          Object {
            "props": Object {
              "className": "pf-u-text-align-center",
            },
            "title": "File name",
          },
          "",
        ]
      }
      className=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      onCollapse={null}
      onExpand={null}
      rowLabeledBy="simple-node"
      rows={
        Array [
          Array [
            Object {
              "title": 36,
            },
            Object {
              "title": "123456",
            },
            Object {
              "title": "file1.json",
            },
            Object {
              "title": <Button
                aria-label={null}
                className=""
                component={[Function]}
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                isInline={false}
                to="/reports/36"
                type="button"
                variant="primary"
              >
                View
              </Button>,
            },
          ],
          Array [
            Object {
              "title": 37,
            },
            Object {
              "title": "654321",
            },
            Object {
              "title": "file2.json",
            },
            Object {
              "title": <Button
                aria-label={null}
                className=""
                component={[Function]}
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                isInline={false}
                to="/reports/37"
                type="button"
                variant="primary"
              >
                View
              </Button>,
            },
          ],
        ]
      }
      variant={null}
    >
      <TableHeader
        className=""
      />
      <TableBody
        className=""
        onRowClick={[Function]}
        rowKey="id"
      />
    </Table>
  </LoadingState>
</withRouter(ReportsPage)>
`;

exports[`ReportList expect to render loading list 1`] = `
<withRouter(ReportsPage)>
  <LoadingState
    loading={true}
    placeholder=""
  >
    <TableToolbar
      className="pf-u-justify-content-space-between"
      isFooter={false}
    >
      <ToolbarGroup
        className={null}
      >
        <ToolbarItem
          className="pf-u-mr-md"
        >
          <Button
            aria-label={null}
            className=""
            component={[Function]}
            isActive={false}
            isBlock={false}
            isDisabled={false}
            isFocus={false}
            isHover={false}
            isInline={false}
            to="/reports/upload"
            type="button"
            variant="primary"
          >
            Create
          </Button>
        </ToolbarItem>
      </ToolbarGroup>
    </TableToolbar>
    <Table
      aria-label="Reports list"
      borders={true}
      cells={
        Array [
          Object {
            "props": Object {},
            "title": "Report Id",
          },
          Object {
            "props": Object {},
            "title": "Customer Id",
          },
          Object {
            "props": Object {
              "className": "pf-u-text-align-center",
            },
            "title": "File name",
          },
          "",
        ]
      }
      className=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      onCollapse={null}
      onExpand={null}
      rowLabeledBy="simple-node"
      rows={
        Array [
          Array [
            Object {
              "title": 36,
            },
            Object {
              "title": "123456",
            },
            Object {
              "title": "file1.json",
            },
            Object {
              "title": <Button
                aria-label={null}
                className=""
                component={[Function]}
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                isInline={false}
                to="/reports/36"
                type="button"
                variant="primary"
              >
                View
              </Button>,
            },
          ],
          Array [
            Object {
              "title": 37,
            },
            Object {
              "title": "654321",
            },
            Object {
              "title": "file2.json",
            },
            Object {
              "title": <Button
                aria-label={null}
                className=""
                component={[Function]}
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                isInline={false}
                to="/reports/37"
                type="button"
                variant="primary"
              >
                View
              </Button>,
            },
          ],
        ]
      }
      variant={null}
    >
      <TableHeader
        className=""
      />
      <TableBody
        className=""
        onRowClick={[Function]}
        rowKey="id"
      />
    </Table>
  </LoadingState>
</withRouter(ReportsPage)>
`;
